# wenet

./: .gitignore
examples/gigaspeech/s0/: run.sh
examples/gigaspeech/s0/local/: gigaspeech_scoring.py  prepare_data.py
runtime/core/cmake/: libtorch.cmake
runtime/core/decoder/: asr_decoder.cc  context_graph.cc  ctc_endpoint.h
runtime/core/frontend/: feature_pipeline.cc
runtime/core/utils/: CMakeLists.txt  common_sdl.cc  common_sdl.h  wav_writer.cc  wav_writer.h
runtime/core/websocket/: websocket_client.cc  websocket_client.h  websocket_server.cc  websocket_server.h
